force-app/main/default/objects/Supplier_Audit__c/Supplier_Audit__c.object-meta.xml
<CustomObject>
    <label>サプライヤー監査</label>
    <pluralLabel>サプライヤー監査</pluralLabel>
    <nameField>
        <label>監査番号</label>
        <type>AutoNumber</type>
        <displayFormat>AUD-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>