force-app/main/default/objects/Supplier_Audit__c/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <label>監査実施日</label>
    <type>Date</type>
    <required>true</required>
</CustomField>