force-app/main/default/objects/Supplier_Audit__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <label>監査担当者</label>
    <type>Text</type>
    <length>100</length>
</CustomField>