force-app/main/default/objects/Supplier_Audit__c/fields/Corrective_Action_Due__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Due__c</fullName>
    <label>是正期限</label>
    <type>Date</type>
</CustomField>