force-app/main/default/objects/Supplier_Audit__c/fields/Corrective_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Status__c</fullName>
    <label>是正状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>未着手</fullName><default>false</default><label>未着手</label></value>
            <value><fullName>対応中</fullName><default>false</default><label>対応中</label></value>
            <value><fullName>完了</fullName><default>false</default><label>完了</label></value>
            <value><fullName>期限超過</fullName><default>false</default><label>期限超過</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>