force-app/main/default/objects/Supplier_Audit__c/fields/Critical_Findings__c.field-meta.xml
<CustomField>
    <fullName>Critical_Findings__c</fullName>
    <label>重大指摘件数</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>