force-app/main/default/objects/Supplier_Audit__c/fields/Findings_Count__c.field-meta.xml
<CustomField>
    <fullName>Findings_Count__c</fullName>
    <label>指摘件数</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>