force-app/main/default/objects/Supplier_Audit__c/fields/Findings_Summary__c.field-meta.xml
<CustomField>
    <fullName>Findings_Summary__c</fullName>
    <label>指摘事項サマリー</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>