force-app/main/default/objects/Supplier_Audit__c/fields/Next_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Audit_Date__c</fullName>
    <label>次回監査予定日</label>
    <type>Date</type>
</CustomField>