force-app/main/default/objects/Supplier_Audit__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>監査結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>合格</fullName><default>false</default><label>合格</label></value>
            <value><fullName>条件付合格</fullName><default>false</default><label>条件付合格</label></value>
            <value><fullName>不合格</fullName><default>false</default><label>不合格</label></value>
            <value><fullName>保留</fullName><default>false</default><label>保留</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>