force-app/main/default/objects/Supplier_Audit__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>監査範囲</label>
    <type>Text</type>
    <length>255</length>
</CustomField>