force-app/main/default/objects/Supplier_Audit__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>監査スコア</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>